# qBittorrent

.github/workflows/: ci_macos.yaml  ci_ubuntu.yaml  ci_windows.yaml
src/app/: CMakeLists.txt  application.cpp  application.h  filelogger.cpp  filelogger.h  signalhandler.cpp  upgrade.cpp
src/base/: preferences.cpp  preferences.h
src/base/bittorrent/: bencoderesumedatastorage.cpp  session.cpp  session.h  sessionimpl.cpp  sessionimpl.h
src/base/http/: connection.cpp  server.cpp
src/base/interfaces/: iapplication.h
src/base/utils/: foreignapps.cpp  gzip.cpp  gzip.h  misc.cpp  misc.h
src/gui/: advancedsettings.cpp  advancedsettings.h  mainwindow.cpp  mainwindow.h  optionsdialog.cpp  optionsdialog.ui  transferlistfilterswidget.cpp  transferlistmodel.cpp  transferlistmodel.h  transferlistwidget.cpp
src/gui/properties/: peerlistwidget.cpp
src/webui/: webapplication.cpp  webapplication.h
src/webui/api/: appcontroller.cpp  appcontroller.h  torrentscontroller.cpp
src/webui/api/serialize/: serialize_torrent.cpp  serialize_torrent.h
src/webui/www/: webui.qrc
src/webui/www/private/: download.html  index.html  newcategory.html  newfolder.html  upload.html
src/webui/www/private/css/: style.css
src/webui/www/private/scripts/: client.js  contextmenu.js  dynamicTable.js  mocha-init.js  piecesbar.js  progressbar.js  prop-files.js  prop-general.js  prop-peers.js  prop-trackers.js  prop-webseeds.js  search.js
src/webui/www/private/views/: preferences.html  rss.html
src/webui/www/translations/: webui_ar.ts  webui_az@latin.ts  webui_be.ts  webui_bg.ts  webui_ca.ts  webui_cs.ts  webui_da.ts  webui_de.ts  webui_el.ts  webui_en.ts  webui_en_AU.ts  webui_en_GB.ts  webui_eo.ts  webui_es.ts  webui_et.ts  webui_eu.ts  webui_fa.ts  webui_fi.ts  webui_fr.ts  webui_gl.ts  webui_he.ts  webui_hi_IN.ts  webui_hr.ts  webui_hu.ts  webui_hy.ts  webui_id.ts  webui_is.ts  webui_it.ts  webui_ja.ts  webui_ka.ts  webui_ko.ts  webui_lt.ts  webui_ltg.ts  webui_lv_LV.ts  webui_mn_MN.ts  webui_ms_MY.ts  webui_nb.ts  webui_nl.ts  webui_oc.ts  webui_pl.ts  (+16 more)
test/: testutilsgzip.cpp
